# Roland-SE-02-SYSEX-controller

./: .gitignore  CMakeLists.txt  README.md  SE02_SysEx_Knowledge.md  Sysex_Mapper.py  analyze_history.py  append_fetch.py  build_log.txt  check.py  check_crashes.py  check_dupes.py  check_ids.py  check_scripts.py  dump_h.txt  extract.py  extract2.py  extract3.py  extract_browser.py  extract_code.py  extract_h.py  extract_real.py  extract_write.py  extracted.txt  extracted_raw.json  fix.py  fix_editor.py  fix_methods.py  get_heredoc.py  get_history.py  get_history2.py  get_timestamps.py  midi_capture.txt  midi_diag.txt  parse_map.py  raw_tool_call.json  replay.py  restore_script.ps1  revert.py  sysex_dump.txt  sysex_find_pwm.txt  (+4 more)
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetBrowser.cpp  PresetBrowser.h  PresetNames.h
scratch/: PluginEditor_v1.cpp  PluginProcessor_v1.cpp  add_create.py  add_editor_cpp.py  add_editor_h.py  add_osc3_fine.py  admin_clean.ps1  brute.py  capture.py  check_dumps.py  check_ids.py  check_midi.py  check_missing.py  clean2.py  clean_and_deploy.ps1  clean_ed_cpp.py  clean_ed_h.py  clean_trailing.py  compare_dumps.py  deep_purge.py  deploy.ps1  do_clean.ps1  drop_valLabel.py  dump_sys.py  extract.py  extract2.py  extract_1150.py  extract_rq1.py  extract_v2.py  extracted_generate_1150.py  find_func.py  find_gen.py  find_rq1.py  find_rq1_real.py  find_show_params.py  find_white.py  fix.py  fix2.py  fix_atomic.py  fix_ccparams_init.py  (+142 more)
